force-app/main/default/objects/Travel_Trade_Meeting__c/Travel_Trade_Meeting__c.object-meta.xml
<CustomObject>
    <description>An Object for Avia reps to enter details of meetings they hold with Tourism Accounts</description>
    <label>Travel Trade Meeting</label>
    <nameField>
        <label>Meeting Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Trade Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>