force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting__c</fullName>
    <inlineHelpText>Please enter the date the meeting is planned or was held</inlineHelpText>
    <label>Date of Meeting</label>
    <required>true</required>
    <type>Date</type>
</CustomField>