force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <inlineHelpText>Where was the meeting held</inlineHelpText>
    <label>Meeting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>