force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Meeting_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Minutes__c</fullName>
    <inlineHelpText>Enter all your meeting notes here</inlineHelpText>
    <label>Meeting Minutes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>