force-app/main/default/objects/Travel_Trade_Meeting__c/fields/My_Meeting__c.field-meta.xml
<CustomField>
    <fullName>My_Meeting__c</fullName>
    <formula>IF (VR_Representative__c =  $User.Id ,true,false )</formula>
    <inlineHelpText>Set to true if the current user is the VR Rep on the meeting</inlineHelpText>
    <label>My Meeting</label>
    <type>Checkbox</type>
</CustomField>