force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Old_Instance_VR_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_VR_Rep_ID__c</fullName>
    <description>Temp field to store the ID of the VR Rep that was referenced in the old instance</description>
    <externalId>true</externalId>
    <label>Old Instance VR Rep ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>