force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is ticked it will be posted to a chatter group using a Trigger.

Default = Unchecked :: Manual Sharing
Default = Checked :: Automatic Sharing

This field will not be visible on the page layout, instead it will be driven by a custom action (or button?)</description>
    <label>Share</label>
    <type>Checkbox</type>
</CustomField>