force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Sharing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Notes__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <description>This field should not appear on any page layout but is used to when sharing the meeting in a chatter post</description>
    <inlineHelpText>Enter any notes that will be used when sharing this meeting in Chatter</inlineHelpText>
    <label>Sharing Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>