force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Tourism_Account__c.field-meta.xml
<CustomField>
    <fullName>Tourism_Account__c</fullName>
    <inlineHelpText>lookup the Name of the Tourism Account for which the meeting was held</inlineHelpText>
    <label>Tourism Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <infoMessage>Search for the Tourism account associated with this meeting</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travel Trade Meetings</relationshipLabel>
    <relationshipName>Travel_Trade_Meetings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>