force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Tourism_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tourism_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup the name of the main Contact with which the meeting was held</inlineHelpText>
    <label>Tourism Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Tourism_Account__c</valueField>
        </filterItems>
        <infoMessage>Search for the Contact under the Tourism account you selected</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Travel Trade Meetings</relationshipLabel>
    <relationshipName>Travel_Trade_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>