force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Trade_Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Event Attendee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Attendee must be from the same Tourism Account</errorMessage>
        <filterItems>
            <field>Trade_Event_Attendee__c.Contact__r.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Tourism_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trade_Event_Attendee__c</referenceTo>
    <relationshipLabel>Travel Trade Meetings</relationshipLabel>
    <relationshipName>Travel_Trade_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>