force-app/main/default/objects/Travel_Trade_Meeting__c/fields/Villages_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Villages_of_Interest__c</fullName>
    <description>Relevant Villages - This *may* help drive the Groups that are mentioned in the chatter Share trigger - for now though it is be hard coded to one group</description>
    <label>Village(s) of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester Village</fullName>
            </value>
            <value>
                <fullName>Fidenza Village</fullName>
            </value>
            <value>
                <fullName>Ingolstadt Village</fullName>
            </value>
            <value>
                <fullName>Kildare Village</fullName>
            </value>
            <value>
                <fullName>La Roca Village</fullName>
            </value>
            <value>
                <fullName>Las Rozas Village</fullName>
            </value>
            <value>
                <fullName>La Vallée Village</fullName>
            </value>
            <value>
                <fullName>Maasmechelen Village</fullName>
            </value>
            <value>
                <fullName>Shanghai Village</fullName>
            </value>
            <value>
                <fullName>Suzhou Village</fullName>
            </value>
            <value>
                <fullName>Wertheim Village</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>