force-app/main/default/objects/Travel_Trade_Meeting__c/fields/VR_Representative__c.field-meta.xml
<CustomField>
    <fullName>VR_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the person that represented Value Retail</inlineHelpText>
    <label>VR Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Travel_Trade_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>