force-app/main/default/objects/Travel_Trade_Meeting__c/validationRules/TTM_can_only_be_shared_once.validationRule-meta.xml
<ValidationRule>
    <fullName>TTM_can_only_be_shared_once</fullName>
    <active>false</active>
    <description>Travel Trade Meeting Should only be allowed to be shared once</description>
    <errorConditionFormula>PRIORVALUE(Share__c) = true
&amp;&amp; Share__c != false</errorConditionFormula>
    <errorMessage>This meeting has already been shared.
You can only share the meeting once</errorMessage>
</ValidationRule>