force-app/main/default/objects/Travel_Trade_Meeting__c/listViews/All_Travel_Trade_Meetings.listView-meta.xml
<ListView>
    <fullName>All_Travel_Trade_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Meeting__c</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Tourism_Account__c</columns>
    <columns>Tourism_Contact__c</columns>
    <columns>VR_Representative__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Travel Trade Meetings</label>
    <sharedTo>
        <role>Group_Tourism</role>
    </sharedTo>
</ListView>