force-app/main/default/objects/Travel_Trade_Meeting__c/listViews/Last_Week_s_Meetings.listView-meta.xml
<ListView>
    <fullName>Last_Week_s_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Meeting__c</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Tourism_Account__c</columns>
    <columns>Tourism_Contact__c</columns>
    <columns>VR_Representative__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_of_Meeting__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Last Week&apos;s Meetings</label>
</ListView>