force-app/main/default/objects/Travel_Trade_Meeting__c/listViews/My_Travel_Trade_Meetings.listView-meta.xml
<ListView>
    <fullName>My_Travel_Trade_Meetings</fullName>
    <columns>Tourism_Account__c</columns>
    <columns>Tourism_Contact__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Meeting_Minutes__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Travel Trade Meetings</label>
</ListView>