force-app/main/default/objects/Travel_Trade_Meeting__c/listViews/My_Upcoming_Meetings.listView-meta.xml
<ListView>
    <fullName>My_Upcoming_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <columns>Tourism_Account__c</columns>
    <columns>Tourism_Contact__c</columns>
    <columns>VR_Representative__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date_of_Meeting__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>My Upcoming Meetings</label>
</ListView>